--- a/src/func/AzFunc.SamlAssertion/AzFunc.SamlAssertion.csproj
+++ b/src/func/AzFunc.SamlAssertion/AzFunc.SamlAssertion.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.5.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="7.5.1" />
   </ItemGroup>
   <ItemGroup>
